lot control improvements, added icon

--- a/src/NanoVNASaver/Windows/ui/main.qrc
+++ b/src/NanoVNASaver/Windows/ui/main.qrc
@@ -2,5 +2,6 @@
   <qresource prefix="window">
     <file>icon_48x48.png</file>
     <file>logo_128x128.png</file>
+    <file>tester_icon_48x48.png</file>
   </qresource>
 </RCC>
